[tool.poetry]
name = "v1-periphery"
version = "0.1.0"
description = ""
authors = ["deepsp94 <anantsp94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
eth-brownie = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
